Added Spares Inventory Functionality